# bot_29

./: .gitignore  .replit  Procfile  README.md  admin_settings.jsonc  admin_ws_manager.py  bot.py  bot_utils.py  build.sh  config.py  configurable_logger.py  core.py  darabase.py  database.py  groq_transcriber.py  ice_provider.py  ice_servers.json  keep_alive.py  keep_alive_urls.json  logger_config.py  logger_config.py.py  main .py  main.py  notifier.py  pyproject.toml  requirements.txt  server_logger_config.py  settings_manager.py  utils.py  websocket_manager.py
config/: config_manager.py  keep_alive_settings.json  keep_alive_settings.jsonc  keepalive_security.py
core/: app_setup.py  schemas.py
data_layer/: __init__.py  action_queries.py  call_queries.py  connection_queries.py  danger_zone_queries.py  db_viewer_queries.py  pool_manager.py  room_queries.py  stats_queries.py  token_queries.py  user_queries.py
docs/: agents_tunnel.md  telegram_hub_setup.md  telegram_tunnel.md
handlers/: admin_handlers.py  inline_handlers.py  public_handlers.py
routers/: agents_api.py  crpt_api.py  filevault_api.py  keepalive_api.py  radio_proxy.py  telegram_inbox_api.py  telegram_tunnel_api.py  web.py
routes/: __init__.py  admin.py  admin_router.py  api_router.py  websocket.py
services/: audio_merger.py  audio_mixer.py  call_service.py  explorer_service.py  keep_alive.py  keepalive_auth.py  room_service.py  stats_manager.py  telegram_listener.py  telegram_tunnel.py  template_cache.py  websocket_handler.py
static/: style.css
templates/: admin.html  admin.js  admn.html  (+11 more)
(+300 files in other folders)
