[tool.poetry]
name = "telegram-voice-caller"
version = "0.4.0"
description = "A simple voice calling Mini App for Telegram using WebRTC with private link mode and admin panel."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2 = "^3.1.2"
python-telegram-bot = "^20.7"
websockets = "^12.0"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
user-agents = "^2.2.0"
httpx = "^0.25.0"
twilio = "^9.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
